# hatch-locked-deps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
hatch_locked_deps/: formats.py  hook.py
hatch_locked_deps/parsers/: __init__.py  dep.py  pylock.py  requirements.py  uv.py
tests/: test_e2e.py  test_parsers.py
